.yaml로 문서화 및 Swagger로 시각화.
